More misalignment fixes

--- a/src/containers/AnimeInfo/style.scss
+++ b/src/containers/AnimeInfo/style.scss
@@ -102,7 +102,6 @@ h2.InfoHeader{
     align-items: center;
     flex-wrap: wrap;
     gap: 8px;
-    margin: 8px;
 }
 
 #SimilliarAnimeHeader {
@@ -167,6 +166,7 @@ h2.InfoHeader{
 
 #SimiliarAnimeDiv{
     background-color: black;
+    padding: 8px;
 }
 
 #ChatDiv{
